--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4.1.18",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "^24.0.0",
+    "npm": "^11.0.0"
   }
 }
